--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,17 @@
   src: url(../font/cursive/Cursivestandard.ttf);
 }
 
+main {
+  display: flex;
+flex-direction: column;
+width: 33%;
+align-items: center;
+
+}
+
 html {
   background: url("../img/jeu.png") center center no-repeat fixed;
-  background-size: 44%;
+  background-size: 36%;
 }
 
 main p {
