--- a/css/style.css
+++ b/css/style.css
@@ -11,20 +11,37 @@
 main {
   display: flex;
 flex-direction: column;
-width: 33%;
+width: 50%;
 align-items: center;
 
 }
 
 html {
   background: url("../img/jeu.png") center center no-repeat fixed;
-  background-size: 36%;
+  background-size: 30%;
 }
 
 main p {
  font-family: "cursive";
+ font-size: 20px;
 }
 
-main h1 {
+.result {
+  margin-top: 120px;
+}
+
+body h1 {
   font-family: "monkey";
+}
+
+main button {
+  border-radius: 10px;
+background-color: black;
+border: black;
+color: white;
+font-family: "cursive";
+width: 150px;
+height: 50px;
+font-weight: bold;
+font-size: 25px;
 }
